CSRF protection implemented

--- a/application/views/_templates/footer.twig
+++ b/application/views/_templates/footer.twig
@@ -1,7 +1,7 @@
-        <footer>
-            <p>&copy; 2024 Davide Branchi. All Rights Reserved.</p>
-        </footer>
-    </body>
+    <footer class="bg-dark text-center text-white py-3">
+        <p>&copy; 2024 Davide Branchi. All Rights Reserved.</p>
+    </footer>
+</body>
     <script src="{{ URL }}vendor/twbs/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="{{ URL }}vendor/realrashid/sweet-alert/resources/js/sweetalert.all.js"></script>
 </html>
