--- a/application/views/_templates/header.twig
+++ b/application/views/_templates/header.twig
@@ -8,6 +8,7 @@
         <link rel="stylesheet" href="{{ URL }}vendor/components/font-awesome/css/all.min.css">
         <script>
             const URL = "{{ URL }}";
+            const CSRFToken = "{{ session.CSRFToken }}";
         </script>
     </head>
     <!--Navbar-->
