--- a/application/views/fotografie/dettagli.twig
+++ b/application/views/fotografie/dettagli.twig
@@ -43,26 +43,30 @@
             <br>
             <h4>La tua valutazione</h4>
             {% if session.ruolo %}
-                <div class="stars">
-                    {% if valutazionePresente %}
-                        {% for i in range(1, 5) %}
-                            {% if i <= valutazionePresente.stelle %}
-                                <img src="{{ URL }}public/assets/images/star_filled.png" class="star" width="40">
-                            {% else %}
-                                <img src="{{ URL }}public/assets/images/star_empty.png" class="star" width="40">
-                            {% endif %}
-                        {% endfor %}
-                        <button class="btn btn-primary" id="updateValutazione">Aggiorna valutazione</button>
-                    {% else %}
-                        <img src="{{ URL }}public/assets/images/star_empty.png" class="star" width="40">
-                        <img src="{{ URL }}public/assets/images/star_empty.png" class="star" width="40">
-                        <img src="{{ URL }}public/assets/images/star_empty.png" class="star" width="40">
-                        <img src="{{ URL }}public/assets/images/star_empty.png" class="star" width="40">
-                        <img src="{{ URL }}public/assets/images/star_empty.png" class="star" width="40">
-                        <button class="btn btn-primary" id="addValutazione">Aggiungi valutazione</button>
-                    {% endif %}
-                    <button class="btn btn-outline-danger" id="resetStarsBtn">X</button>
-                </div>
+                {% if session["utente-id"] != fotografiaId.getUtenteId %}
+                    <div class="stars">
+                        {% if valutazionePresente %}
+                            {% for i in range(1, 5) %}
+                                {% if i <= valutazionePresente.stelle %}
+                                    <img src="{{ URL }}public/assets/images/star_filled.png" class="star" width="40">
+                                {% else %}
+                                    <img src="{{ URL }}public/assets/images/star_empty.png" class="star" width="40">
+                                {% endif %}
+                            {% endfor %}
+                            <button class="btn btn-primary" id="updateValutazione">Aggiorna valutazione</button>
+                        {% else %}
+                            <img src="{{ URL }}public/assets/images/star_empty.png" class="star" width="40">
+                            <img src="{{ URL }}public/assets/images/star_empty.png" class="star" width="40">
+                            <img src="{{ URL }}public/assets/images/star_empty.png" class="star" width="40">
+                            <img src="{{ URL }}public/assets/images/star_empty.png" class="star" width="40">
+                            <img src="{{ URL }}public/assets/images/star_empty.png" class="star" width="40">
+                            <button class="btn btn-primary" id="addValutazione">Aggiungi valutazione</button>
+                        {% endif %}
+                        <button class="btn btn-outline-danger" id="resetStarsBtn">X</button>
+                    </div>
+                {% else %}
+                    <p>Non è possibile aggiungere una valutazione alle proprie immagini!</p>
+                {% endif %}
             {% else %}
                 <p>Devi avere un'account per aggiungere una valutazione!</p>
             {% endif %}
@@ -78,6 +82,7 @@
                     <textarea required name="contenuto" placeholder="Inserisci testo" class="form-control" style="height: 100px" maxlength="500"></textarea>
                     <div id="fileHelp" class="form-text">Max. 500 caratteri</div>
                     <br>
+                    <input type="hidden" name="CSRFToken" value="{{ session.CSRFToken }}">
                     <button type="submit" class="btn btn-primary">Commenta</button>
                 </form>
                 {% if session.showSuccessMsg %}
