--- a/application/views/upload/upload.twig
+++ b/application/views/upload/upload.twig
@@ -48,6 +48,7 @@
             <div class="form-group">
                 <button class="btn btn-primary" type="submit">Carica fotografia</button>
             </div>
+            <input type="hidden" value="{{ session.CSRFToken }}" name="CSRFToken">
         </form>
     </div>
 </div>
